Alignment fix and added more buttons

--- a/src/frontend/src/style/_interface.scss
+++ b/src/frontend/src/style/_interface.scss
@@ -92,9 +92,7 @@
     padding-top: 0.5rem;
     -webkit-padding-top: 0.5rem;
   }
-  .form-control {
-  margin: 0.5rem;
-  }
+
 
   .btn {
   border-radius:0.5rem;
